chore(): docker-compose mysql root user password chagned to shorter one

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,8 +5,8 @@ services:
     ports:
       - 3306:3306
     environment:
-      MYSQL_ROOT_PASSWORD: rootpassword
-      MYSQL_DATABASE: mydatabase
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: snippets
       MYSQL_USER: user
       MYSQL_PASSWORD: password
     volumes:
